# zoey

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
zoey/: cli.py
zoey/scopes/: business.py  generators.py  groups.py  pages.py  projects.py  sites.py
zoey/templates/page_base/: single_page.md
zoey/templates/project_base/: config.py
zoey/templates/project_base/src/assets/: style-dark.css  style.css
