[metadata]
name = zoey
version = 0.1.0
author = Soumit Das
author_email = me@soumit.in
description = Zoey is a command line static site generator, written in Python.
url = https://github.com/ITSSOUMIT/zoey

[options]
packages = find:
include_package_data = True
install_requires =
    click
    markdown

[options.entry_points]
console_scripts =
    zoey = zoey.cli:main