[metadata]
name = zoey
version = 0.2.0
author = Soumit Das
author_email = me@soumit.in
description = Zoey is a command line static site generator, written in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ITSSOUMIT/zoey
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
install_requires =
    click
    markdown

[options.entry_points]
console_scripts =
    zoey = zoey.cli:main